@@ -1,6 +1,7 @@
 0.12.0
 ------
 
+* Table.columns can now be accessed by index as well as name. (#281)
 * Added Column.table and Row.table properties. (#284)
 * Added column name and type validation to Table constructor. (#285)
 * Added Row.compute method to parallel Column.aggregate. (#280)
